--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -23,15 +23,28 @@ jobs:
         id: get_version
         uses: battila7/get-version-action@v2
 
+      # NEW: decide URLs based on whether this is a prerelease
+      - name: Compute manifest/download URLs
+        id: urls
+        run: |
+          if [ "${{ github.event.release.prerelease }}" = "true" ]; then
+            echo "manifest=https://github.com/${{ github.repository }}/releases/download/${{ github.event.release.tag_name }}/module.json" >> $GITHUB_OUTPUT
+            echo "download=https://github.com/${{ github.repository }}/releases/download/${{ github.event.release.tag_name }}/bbmm.zip" >> $GITHUB_OUTPUT
+          else
+            # Stable builds use /latest/ manifest so users stay on the stable channel
+            echo "manifest=https://github.com/${{ github.repository }}/releases/latest/download/module.json" >> $GITHUB_OUTPUT
+            echo "download=https://github.com/${{ github.repository }}/releases/download/${{ github.event.release.tag_name }}/bbmm.zip" >> $GITHUB_OUTPUT
+          fi
+
       - name: Modify Module Manifest With Release-Specific Values
         id: sub_manifest_link_version
         uses: microsoft/variable-substitution@v1
         with:
           files: "module.json"
         env:
-          version: ${{steps.get_version.outputs.version-without-v}}
-          manifest: https://github.com/${{github.repository}}/releases/latest/download/module.json
-          download: https://github.com/${{github.repository}}/releases/download/${{github.event.release.tag_name}}/bbmm.zip
+          version: ${{ steps.get_version.outputs.version-without-v }}
+          manifest: ${{ steps.urls.outputs.manifest }}
+          download: ${{ steps.urls.outputs.download }}
 
       - name: Create Module Archive
         run: zip -r bbmm.zip module.json README.md LICENSE.md CHANGELOG.md scripts/ packs/ styles/ lang/
@@ -55,11 +68,12 @@ jobs:
           artifacts: |
             module.json
             bbmm.zip
-          
+
+      # Will only run for stable (non-prerelease) – keeps test builds off Foundry
       - name: Publish Module to FoundryVTT Website
         id: publish-to-foundry-website
-        if: ${{ ! github.event.release.prerelease}}
+        if: ${{ ! github.event.release.prerelease }}
         uses: cs96and/FoundryVTT-release-package@v1
         with:
           package-token: ${{ secrets.FOUNDRY_RELEASE_TOKEN }}
-          manifest-url: https://github.com/${{github.repository}}/releases/download/${{github.event.release.tag_name}}/module.json
+          manifest-url: https://github.com/${{ github.repository }}/releases/download/${{ github.event.release.tag_name }}/module.json
