--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -70,8 +70,7 @@ jobs:
           zip -r dist/bbmm.zip \
             module.json README.md "$LIC" CHANGELOG.md \
             scripts/ packs/ styles/ lang/ assets/ \
-            -x "packs/*/_source/*" \
-            -x "storage/**"
+            -x "packs/*/_source/*" 
 
       - uses: release-flow/keep-a-changelog-action@v3
         id: changelog
