--- a/.github/DISCUSSION_TEMPLATE/inclusion-exclusion-submissions.yml
+++ b/.github/DISCUSSION_TEMPLATE/inclusion-exclusion-submissions.yml
@@ -1,7 +1,4 @@
-name: "Inclusion / Exclusion Submissions"
-description: "Submit a BBMM inclusion or exclusion JSON file"
 title: "[Inclusion/Exclusion] "
-category: "Inclusion/Exclusion submissions"
 labels:
   - "inclusion-exclusion"
 
@@ -11,19 +8,12 @@ body:
       value: |
         ## Submit a BBMM Inclusion / Exclusion File
 
-        Please attach your `.json` file to this discussion before posting:
-        - Drag and drop the file into the editor, or use the attachment button.
-        - The JSON must include:
-          - `schemaVersion`
-          - `target`
-          - `targetVersion`
-          - `foundryVersion`
-          - `entries`
-
-        If no `.json` file is attached, the validator workflow will not pass.
+        Attach your `.json` file to this discussion before posting:
+        - Drag and drop the file into the editor (or use the attachment button)
+        - The JSON must include: `schemaVersion`, `target`, `targetVersion`, `foundryVersion`, `entries`
 
   - type: dropdown
-    id: "fileType"
+    id: fileType
     attributes:
       label: "File Type"
       description: "Is this an inclusions file or exclusions file?"
@@ -34,7 +24,7 @@ body:
       required: true
 
   - type: input
-    id: "target"
+    id: target
     attributes:
       label: "Target Namespace (Module/System ID)"
       description: "Example: pf2e-workbench or bbmm"
@@ -43,7 +33,7 @@ body:
       required: true
 
   - type: input
-    id: "targetVersion"
+    id: targetVersion
     attributes:
       label: "Target Version"
       description: "Version of the module/system this file was created for."
@@ -52,7 +42,7 @@ body:
       required: true
 
   - type: input
-    id: "foundryVersion"
+    id: foundryVersion
     attributes:
       label: "Foundry Version"
       description: "Foundry version used when creating/testing this file."
@@ -61,11 +51,11 @@ body:
       required: true
 
   - type: textarea
-    id: "description"
+    id: description
     attributes:
       label: "Description (Optional)"
       description: "Briefly describe what this inclusion/exclusion file covers."
-      placeholder: "Includes all hidden automation-related settings for PF2e Workbench."
+      placeholder: "Includes hidden settings keys used by PF2e Workbench."
     validations:
       required: false
 
@@ -74,14 +64,13 @@ body:
       value: |
         ### Required: Attach Your JSON File
 
-        Make sure your `.json` file is attached to this discussion.
-        The validator will automatically check it when posted or edited.
+        Make sure your `.json` file is attached to this discussion post.
 
   - type: textarea
-    id: "links"
+    id: links
     attributes:
       label: "Related Links (Optional)"
-      description: "Optional links to the module/system page or documentation."
+      description: "Optional links to module/system page or documentation."
       placeholder: |
         - Module page: ...
         - Documentation: ...
