--- a/.github/workflows/bbmm-validate-inclusion-exclusions.yml
+++ b/.github/workflows/bbmm-validate-inclusion-exclusions.yml
@@ -2,7 +2,7 @@ name: BBMM Validate Inclusion/Exclusion JSON (Discussions)
 
 on:
   discussion:
-    types: [opened, edited]
+    types: [opened, created, edited]
   discussion_comment:
     types: [created, edited]
 
